Project3/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> <empty>
Rule 3     statements -> statements statement
Rule 4     statement -> VAL_COPY value SCALAR_VAR
Rule 5     statement -> ADD value value SCALAR_VAR
Rule 6     statement -> SUB value value SCALAR_VAR
Rule 7     statement -> MULT value value SCALAR_VAR
Rule 8     statement -> DIV value value SCALAR_VAR
Rule 9     statement -> TEST_LESS value value SCALAR_VAR
Rule 10    statement -> TEST_GTR value value SCALAR_VAR
Rule 11    statement -> TEST_EQU value value SCALAR_VAR
Rule 12    statement -> TEST_NEQU value value SCALAR_VAR
Rule 13    statement -> TEST_GTE value value SCALAR_VAR
Rule 14    statement -> TEST_LTE value value SCALAR_VAR
Rule 15    statement -> ID :
Rule 16    value -> ID
Rule 17    statement -> JUMP value
Rule 18    statement -> JUMP_IF_0 value
Rule 19    statement -> JUMP_IF_N0 value
Rule 20    statement -> RANDOM value SCALAR_VAR
Rule 21    statement -> OUT_VAL value
Rule 22    statement -> OUT_CHAR value
Rule 23    statement -> NOP
Rule 24    statement -> PUSH value
Rule 25    statement -> POP SCALAR_VAR
Rule 26    statement -> AR_GET_IDX ARRAY_VAR value SCALAR_VAR
Rule 27    statement -> AR_SET_IDX ARRAY_VAR value value
Rule 28    statement -> AR_GET_SIZE ARRAY_VAR SCALAR_VAR
Rule 29    statement -> AR_SET_SIZE ARRAY_VAR value
Rule 30    statement -> AR_COPY ARRAY_VAR ARRAY_VAR
Rule 31    statement -> AR_PUSH ARRAY_VAR ARRAY_VAR
Rule 32    statement -> AR_POP ARRAY_VAR ARRAY_VAR
Rule 33    value -> CHAR_LITERAL
Rule 34    value -> VAL_LITERAL
Rule 35    value -> SCALAR_VAR

Terminals, with rules where they appear

:                    : 15
ADD                  : 5
ARRAY_VAR            : 26 27 28 29 30 30 31 31 32 32
AR_COPY              : 30
AR_GET_IDX           : 26
AR_GET_SIZE          : 28
AR_POP               : 32
AR_PUSH              : 31
AR_SET_IDX           : 27
AR_SET_SIZE          : 29
CHAR_LITERAL         : 33
DIV                  : 8
ID                   : 15 16
JUMP                 : 17
JUMP_IF_0            : 18
JUMP_IF_N0           : 19
MULT                 : 7
NOP                  : 23
OUT_CHAR             : 22
OUT_VAL              : 21
POP                  : 25
PUSH                 : 24
RANDOM               : 20
SCALAR_VAR           : 4 5 6 7 8 9 10 11 12 13 14 20 25 26 28 35
SUB                  : 6
TEST_EQU             : 11
TEST_GTE             : 13
TEST_GTR             : 10
TEST_LESS            : 9
TEST_LTE             : 14
TEST_NEQU            : 12
VAL_COPY             : 4
VAL_LITERAL          : 34
error                : 

Nonterminals, with rules where they appear

program              : 0
statement            : 3
statements           : 1 3
value                : 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 17 18 19 20 21 22 24 26 27 27 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> .
    (3) statements -> . statements statement

    VAL_COPY        reduce using rule 2 (statements -> .)
    ADD             reduce using rule 2 (statements -> .)
    SUB             reduce using rule 2 (statements -> .)
    MULT            reduce using rule 2 (statements -> .)
    DIV             reduce using rule 2 (statements -> .)
    TEST_LESS       reduce using rule 2 (statements -> .)
    TEST_GTR        reduce using rule 2 (statements -> .)
    TEST_EQU        reduce using rule 2 (statements -> .)
    TEST_NEQU       reduce using rule 2 (statements -> .)
    TEST_GTE        reduce using rule 2 (statements -> .)
    TEST_LTE        reduce using rule 2 (statements -> .)
    ID              reduce using rule 2 (statements -> .)
    JUMP            reduce using rule 2 (statements -> .)
    JUMP_IF_0       reduce using rule 2 (statements -> .)
    JUMP_IF_N0      reduce using rule 2 (statements -> .)
    RANDOM          reduce using rule 2 (statements -> .)
    OUT_VAL         reduce using rule 2 (statements -> .)
    OUT_CHAR        reduce using rule 2 (statements -> .)
    NOP             reduce using rule 2 (statements -> .)
    PUSH            reduce using rule 2 (statements -> .)
    POP             reduce using rule 2 (statements -> .)
    AR_GET_IDX      reduce using rule 2 (statements -> .)
    AR_SET_IDX      reduce using rule 2 (statements -> .)
    AR_GET_SIZE     reduce using rule 2 (statements -> .)
    AR_SET_SIZE     reduce using rule 2 (statements -> .)
    AR_COPY         reduce using rule 2 (statements -> .)
    AR_PUSH         reduce using rule 2 (statements -> .)
    AR_POP          reduce using rule 2 (statements -> .)
    $end            reduce using rule 2 (statements -> .)

    program                        shift and go to state 1
    statements                     shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . VAL_COPY value SCALAR_VAR
    (5) statement -> . ADD value value SCALAR_VAR
    (6) statement -> . SUB value value SCALAR_VAR
    (7) statement -> . MULT value value SCALAR_VAR
    (8) statement -> . DIV value value SCALAR_VAR
    (9) statement -> . TEST_LESS value value SCALAR_VAR
    (10) statement -> . TEST_GTR value value SCALAR_VAR
    (11) statement -> . TEST_EQU value value SCALAR_VAR
    (12) statement -> . TEST_NEQU value value SCALAR_VAR
    (13) statement -> . TEST_GTE value value SCALAR_VAR
    (14) statement -> . TEST_LTE value value SCALAR_VAR
    (15) statement -> . ID :
    (17) statement -> . JUMP value
    (18) statement -> . JUMP_IF_0 value
    (19) statement -> . JUMP_IF_N0 value
    (20) statement -> . RANDOM value SCALAR_VAR
    (21) statement -> . OUT_VAL value
    (22) statement -> . OUT_CHAR value
    (23) statement -> . NOP
    (24) statement -> . PUSH value
    (25) statement -> . POP SCALAR_VAR
    (26) statement -> . AR_GET_IDX ARRAY_VAR value SCALAR_VAR
    (27) statement -> . AR_SET_IDX ARRAY_VAR value value
    (28) statement -> . AR_GET_SIZE ARRAY_VAR SCALAR_VAR
    (29) statement -> . AR_SET_SIZE ARRAY_VAR value
    (30) statement -> . AR_COPY ARRAY_VAR ARRAY_VAR
    (31) statement -> . AR_PUSH ARRAY_VAR ARRAY_VAR
    (32) statement -> . AR_POP ARRAY_VAR ARRAY_VAR

    $end            reduce using rule 1 (program -> statements .)
    VAL_COPY        shift and go to state 19
    ADD             shift and go to state 31
    SUB             shift and go to state 26
    MULT            shift and go to state 23
    DIV             shift and go to state 5
    TEST_LESS       shift and go to state 27
    TEST_GTR        shift and go to state 21
    TEST_EQU        shift and go to state 8
    TEST_NEQU       shift and go to state 15
    TEST_GTE        shift and go to state 28
    TEST_LTE        shift and go to state 11
    ID              shift and go to state 13
    JUMP            shift and go to state 16
    JUMP_IF_0       shift and go to state 3
    JUMP_IF_N0      shift and go to state 30
    RANDOM          shift and go to state 10
    OUT_VAL         shift and go to state 18
    OUT_CHAR        shift and go to state 4
    NOP             shift and go to state 7
    PUSH            shift and go to state 12
    POP             shift and go to state 6
    AR_GET_IDX      shift and go to state 9
    AR_SET_IDX      shift and go to state 25
    AR_GET_SIZE     shift and go to state 22
    AR_SET_SIZE     shift and go to state 29
    AR_COPY         shift and go to state 17
    AR_PUSH         shift and go to state 24
    AR_POP          shift and go to state 20

    statement                      shift and go to state 14

state 3

    (18) statement -> JUMP_IF_0 . value
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 34

state 4

    (22) statement -> OUT_CHAR . value
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 37

state 5

    (8) statement -> DIV . value value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 38

state 6

    (25) statement -> POP . SCALAR_VAR

    SCALAR_VAR      shift and go to state 39


state 7

    (23) statement -> NOP .

    VAL_COPY        reduce using rule 23 (statement -> NOP .)
    ADD             reduce using rule 23 (statement -> NOP .)
    SUB             reduce using rule 23 (statement -> NOP .)
    MULT            reduce using rule 23 (statement -> NOP .)
    DIV             reduce using rule 23 (statement -> NOP .)
    TEST_LESS       reduce using rule 23 (statement -> NOP .)
    TEST_GTR        reduce using rule 23 (statement -> NOP .)
    TEST_EQU        reduce using rule 23 (statement -> NOP .)
    TEST_NEQU       reduce using rule 23 (statement -> NOP .)
    TEST_GTE        reduce using rule 23 (statement -> NOP .)
    TEST_LTE        reduce using rule 23 (statement -> NOP .)
    ID              reduce using rule 23 (statement -> NOP .)
    JUMP            reduce using rule 23 (statement -> NOP .)
    JUMP_IF_0       reduce using rule 23 (statement -> NOP .)
    JUMP_IF_N0      reduce using rule 23 (statement -> NOP .)
    RANDOM          reduce using rule 23 (statement -> NOP .)
    OUT_VAL         reduce using rule 23 (statement -> NOP .)
    OUT_CHAR        reduce using rule 23 (statement -> NOP .)
    NOP             reduce using rule 23 (statement -> NOP .)
    PUSH            reduce using rule 23 (statement -> NOP .)
    POP             reduce using rule 23 (statement -> NOP .)
    AR_GET_IDX      reduce using rule 23 (statement -> NOP .)
    AR_SET_IDX      reduce using rule 23 (statement -> NOP .)
    AR_GET_SIZE     reduce using rule 23 (statement -> NOP .)
    AR_SET_SIZE     reduce using rule 23 (statement -> NOP .)
    AR_COPY         reduce using rule 23 (statement -> NOP .)
    AR_PUSH         reduce using rule 23 (statement -> NOP .)
    AR_POP          reduce using rule 23 (statement -> NOP .)
    $end            reduce using rule 23 (statement -> NOP .)


state 8

    (11) statement -> TEST_EQU . value value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 40

state 9

    (26) statement -> AR_GET_IDX . ARRAY_VAR value SCALAR_VAR

    ARRAY_VAR       shift and go to state 41


state 10

    (20) statement -> RANDOM . value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 42

state 11

    (14) statement -> TEST_LTE . value value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 43

state 12

    (24) statement -> PUSH . value
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 44

state 13

    (15) statement -> ID . :

    :               shift and go to state 45


state 14

    (3) statements -> statements statement .

    VAL_COPY        reduce using rule 3 (statements -> statements statement .)
    ADD             reduce using rule 3 (statements -> statements statement .)
    SUB             reduce using rule 3 (statements -> statements statement .)
    MULT            reduce using rule 3 (statements -> statements statement .)
    DIV             reduce using rule 3 (statements -> statements statement .)
    TEST_LESS       reduce using rule 3 (statements -> statements statement .)
    TEST_GTR        reduce using rule 3 (statements -> statements statement .)
    TEST_EQU        reduce using rule 3 (statements -> statements statement .)
    TEST_NEQU       reduce using rule 3 (statements -> statements statement .)
    TEST_GTE        reduce using rule 3 (statements -> statements statement .)
    TEST_LTE        reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    JUMP            reduce using rule 3 (statements -> statements statement .)
    JUMP_IF_0       reduce using rule 3 (statements -> statements statement .)
    JUMP_IF_N0      reduce using rule 3 (statements -> statements statement .)
    RANDOM          reduce using rule 3 (statements -> statements statement .)
    OUT_VAL         reduce using rule 3 (statements -> statements statement .)
    OUT_CHAR        reduce using rule 3 (statements -> statements statement .)
    NOP             reduce using rule 3 (statements -> statements statement .)
    PUSH            reduce using rule 3 (statements -> statements statement .)
    POP             reduce using rule 3 (statements -> statements statement .)
    AR_GET_IDX      reduce using rule 3 (statements -> statements statement .)
    AR_SET_IDX      reduce using rule 3 (statements -> statements statement .)
    AR_GET_SIZE     reduce using rule 3 (statements -> statements statement .)
    AR_SET_SIZE     reduce using rule 3 (statements -> statements statement .)
    AR_COPY         reduce using rule 3 (statements -> statements statement .)
    AR_PUSH         reduce using rule 3 (statements -> statements statement .)
    AR_POP          reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)


state 15

    (12) statement -> TEST_NEQU . value value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 46

state 16

    (17) statement -> JUMP . value
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 47

state 17

    (30) statement -> AR_COPY . ARRAY_VAR ARRAY_VAR

    ARRAY_VAR       shift and go to state 48


state 18

    (21) statement -> OUT_VAL . value
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 49

state 19

    (4) statement -> VAL_COPY . value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 50

state 20

    (32) statement -> AR_POP . ARRAY_VAR ARRAY_VAR

    ARRAY_VAR       shift and go to state 51


state 21

    (10) statement -> TEST_GTR . value value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 52

state 22

    (28) statement -> AR_GET_SIZE . ARRAY_VAR SCALAR_VAR

    ARRAY_VAR       shift and go to state 53


state 23

    (7) statement -> MULT . value value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 54

state 24

    (31) statement -> AR_PUSH . ARRAY_VAR ARRAY_VAR

    ARRAY_VAR       shift and go to state 55


state 25

    (27) statement -> AR_SET_IDX . ARRAY_VAR value value

    ARRAY_VAR       shift and go to state 56


state 26

    (6) statement -> SUB . value value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 57

state 27

    (9) statement -> TEST_LESS . value value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 58

state 28

    (13) statement -> TEST_GTE . value value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 59

state 29

    (29) statement -> AR_SET_SIZE . ARRAY_VAR value

    ARRAY_VAR       shift and go to state 60


state 30

    (19) statement -> JUMP_IF_N0 . value
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 61

state 31

    (5) statement -> ADD . value value SCALAR_VAR
    (16) value -> . ID
    (33) value -> . CHAR_LITERAL
    (34) value -> . VAL_LITERAL
    (35) value -> . SCALAR_VAR

    ID              shift and go to state 33
    CHAR_LITERAL    shift and go to state 32
    VAL_LITERAL     shift and go to state 36
    SCALAR_VAR      shift and go to state 35

    value                          shift and go to state 62

state 32

    (33) value -> CHAR_LITERAL .
